--- a/index.html
+++ b/index.html
@@ -3,7 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GoIT homework</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="/">WebStudio</a>
+      <nav>
+        <ul>
+          <li>
+            <a href="">Studio</a>
+          </li>
+          <li>
+            <a href="">Portfolio</a>
+          </li>
+          <li>
+            <a href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address>
+        info@devstudio.com<br />
+        +11 (000)111-11-11
+      </address>
+    </header>
+    <main>
+      <h1>Effective Solutions for Your Business</h1>
+      <button>Order Service</button>
+      <section></section>
+    </main>
+  </body>
 </html>
