--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:++110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -38,7 +38,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2></h2>
+        <h2>Our Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -115,13 +115,13 @@
           </li>
         </ul>
       </section>
-      <footer>
-        <a href="/">WebStudio</a>
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </footer>
     </main>
+    <footer>
+      <a href="/">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
